--- a/index.css
+++ b/index.css
@@ -61,7 +61,7 @@ a.cta-btn {
 
 nav {
   position: fixed;
-  background: #262e40;
+  background: #576483;
   height: 100vh;
   left: 0;
   top: 0;
@@ -143,11 +143,173 @@ main {
 }
 
 
-/* Scrimba solution */
+/* Your Fixes Below */
+
 body {
-  background-color: #303a52;
+  background: #303A52;
+  font-family: 'Nunito', sans-serif;
 }
 
 nav {
   background: #2C354A;
 }
+
+main {
+  border: unset;
+}
+
+a {
+  text-decoration: none;
+}
+
+p {
+  line-height: 1.4em;
+}
+
+a.cta-btn {
+  font-size: .9em;
+  padding: .2em .4em;
+  border-radius: .2em;
+}
+
+nav ul li a {
+  font-size: 1.2em;
+  padding: .8em 1em;
+}
+
+h3 {
+  font-size: unset;
+}
+
+nav {
+  text-align: left;
+}
+
+.inner-wrapper {
+  padding: 1em;
+}
+
+.panel {
+  padding: .5em 1em;
+  margin-bottom: 2em;
+}
+
+
+/* Large Phones */
+
+@media (min-width: 420px) {
+  body {
+    padding: 1em;
+    text-align: left;
+  }
+
+  ul.data {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  ul.data li {
+    flex: 0 0 50%;
+  }
+}
+
+@media (min-width: 550px) {
+  ul.data {
+    justify-content: center;
+  }
+
+  .panel ul.data li {
+    flex: 0 0 33%;
+  }
+
+  .panel ul.data li p {
+    margin-bottom: 0;
+  }
+
+  nav {
+    width: 40%;
+  }
+}
+
+@media (min-width: 720px) {
+  body {
+    padding: 1.5em;
+  }
+
+  .columns {
+    display: flex;
+  }
+
+  .col {
+    flex: 0 0 48%;
+  }
+
+  .secondary {
+    margin-left: 3em;
+  }
+
+  ul.secondary {
+    margin-top: 0;
+  }
+
+  nav {
+    width: 30%;
+  }
+
+}
+
+@media (min-width: 850px) {
+  body {
+    display: grid;
+    grid-template-columns: 200px auto;
+    grid-template-rows: 70px auto;
+    grid-template-areas:
+      "sidebar header"
+      "sidebar main";
+    padding: 0;
+  }
+
+  header,
+  main {
+    padding: 1.5em;
+  }
+
+  nav {
+    grid-area: sidebar;
+    opacity: 1;
+    visibility: unset;
+    transform: translateX(0);
+    width: 100%;
+    position: unset;
+
+  }
+
+  header {
+    grid-area: header;
+  }
+
+  main {
+    grid-area: main;
+  }
+
+  a.logo {
+    margin: 0;
+  }
+
+  svg {
+    display: none;
+  }
+}
+
+
+/*
+
+- White Space
+- Color 
+- Contrast 
+- Scale
+- Alignment
+- Typography
+- Visual Hierarchy
+
+*/
